fix/#320 Problems with utc date are solved